--- a/widgets/bbb.html
+++ b/widgets/bbb.html
@@ -8,10 +8,10 @@
 
 <body>
     <div>
-        <h1>hello world</h1>
+        <h1>bbbbbb</h1>
     </div>
     <div>
-         <p>this is widgets page</p>
+         <p>this is test page</p>
     </div>
 </body>
 </html>
