--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
          <a href="widgets/widgets.html">
               <p>Widgets</p>
          </a>
+         <a href="/widgets/bbb.html">
+              <p>test</p>
+         </a>
+         
     </div>
 </body>
 </html>
