--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
      <title>HTML Application</title>
+     <meta name="dragon-metrics-site-verification" content="9dd67e898b224bdb8da789f99ff22c66" />
      <meta name="dragon-metrics-site-verification" content="b9d8be9505fe41dc832367e1d034da5d" />
      <meta name="dragon-metrics-site-verification" content="ff194a2256da43c9baf0e180ef795d7c" />
 <!--      <meta name="dragon-metrics-site-verification" content="f06ea8d446e54aadb7cd95f9eadba12c" /> -->
